# rubiks-cube-solver

./: .gitignore  README.md  RubiksCubeSolver.ino  conda.yml  pyproject.toml  run.py
data/: calibration.json  colors.json  faces.json  model.joblib
scripts/: calibrate.py  calibrate_color.py  capture_images.py  detect_color_ranges.py  main.py  pull.sh  push.sh  run.py  run_video_capture.py  set_v4l2_ctl  trigger_lights.py
src/: __init__.py  arduino.py  cv.py  move.py  utils.py
src/arduino/: RubiksCubeSolver.ino
src/rubiks_cube_solver/: __init__.py  arduino.py  calibration.py  constants.py  cv.py  move.py  perception.py  serial.py  solver.py  types.py  utils.py
src/rubiks_cube_solver/scripts/: calibrate_color.py  calibrate_face.py  capture_images.py  collect_color_data.py  jog.py  main.py  move.py  shuffle.py  solve.py  train_color_detector.py  watch_camera.py
test/: test_cv.py  test_kociemba.py  test_serial.py
