[project]
name = "rubiks-cube-solver"
version = "0.1.0"
description = "Software for a Rubik's cube solving robot!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kociemba>=1.2.1",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pyserial>=3.5",
]

[project.scripts]
main = "rubiks_cube_solver.scripts.main:main"
calibrate-color = "rubiks_cube_solver.scripts.calibrate_color:main"
calibrate-face = "rubiks_cube_solver.scripts.calibrate_face:main"
capture-images = "rubiks_cube_solver.scripts.capture_images:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff.lint]
extend-select = ["I"]