[project]
name = "rubiks-cube-solver"
version = "0.1.0"
description = "Software for a Rubik's cube solving robot!"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kociemba>=1.2.1",
    "numpy>=2.3.1",
    "opencv-python>=4.11.0.86",
    "pyserial>=3.5",
    "scikit-learn>=1.7.2",
]

[project.scripts]
main = "rubiks_cube_solver.scripts.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
]

[tool.ruff.lint]
extend-select = ["I"]
